# DyGNN

./: .gitignore  link_prediction_with_emb.py  pyproject.toml  train.py
scripts/: format-lint.sh
src/: attention.py  combiner.py  datasets.py  decayer.py  edge_updater.py  model_recurrent.py  node_updater.py  streaming_link_pred.py  utils.py
