[tool.poetry]
name = "dygnn"
version = "0.1.0"
description = ""
authors = ["Moritz Ludolph <mail@moritzludolph.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.11.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
